calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: 8083
