calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - calibre-web.home.jutonz.com
    secretName: calibre-web-tls
  rules:
  - host: calibre-web.home.jutonz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre-web
            port:
              number: 8083
